--- a/index.html
+++ b/index.html
@@ -3,51 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Estoque</title>
+    <title>Lista de Itens</title>
     <style>
-        .produto {
+        body {
             display: flex;
-            align-items: center;
-            margin: 10px 0;
+            font-family: Arial, sans-serif;
         }
-        .icone {
-            width: 50px;
-            height: 50px;
-            background-color: green; /* Cor padrão */
-            margin-right: 10px;
-            transition: background-color 0.3s;
+        #itemList {
+            width: 300px;
+            padding: 10px;
         }
-        .estoque-baixo {
-            background-color: red; /* Cor quando o estoque está baixo */
+        #notifications {
+            margin-left: 20px;
+            padding: 10px;
+            width: 200px;
+            border: 1px solid #ccc;
+        }
+        .notification {
+            color: red;
+            margin: 5px 0;
         }
     </style>
 </head>
 <body>
-    <h1>Controle de Estoque</h1>
-    
-    <div class="produto">
-        <div class="icone" id="icone-produto"></div>
-        <div>
-            <label for="valor">Valor do Produto: </label>
-            <input type="number" id="valor" value="100" />
-        </div>
-        <div>
-            <label for="estoque">Estoque: </label>
-            <input type="number" id="estoque" value="5" onchange="atualizaEstoque()" />
-        </div>
-    </div>
 
-    <script>
-        function atualizaEstoque() {
-            const estoque = document.getElementById('estoque').value;
-            const icone = document.getElementById('icone-produto');
+<div id="itemList">
+    <h2>Lista de Itens</h2>
+    <ul id="items">
+        <!-- Itens serão gerados aqui -->
+    </ul>
+</div>
 
-            if (estoque <= 3) {
-                icone.classList.add('estoque-baixo');
-            } else {
-                icone.classList.remove('estoque-baixo');
+<div id="notifications">
+    <h2>Notificações</h2>
+    <div id="notificationArea"></div>
+</div>
+
+<script>
+    const items = Array.from({ length: 100 }, (_, i) => ({
+        name: `Item ${i + 1}`,
+        quantity: Math.floor(Math.random() * 10) + 1
+    }));
+
+    const itemsListElement = document.getElementById('items');
+    const notificationArea = document.getElementById('notificationArea');
+
+    function renderItems() {
+        itemsListElement.innerHTML = '';
+        items.forEach((item, index) => {
+            const listItem = document.createElement('li');
+            listItem.innerHTML = `
+                <input type="text" value="${item.name}" onchange="updateName(${index}, this.value)">
+                <input type="number" value="${item.quantity}" min="0" onchange="updateQuantity(${index}, this.value)">
+            `;
+            itemsListElement.appendChild(listItem);
+        });
+    }
+
+    function updateName(index, newName) {
+        items[index].name = newName;
+        checkNotifications();
+    }
+
+    function updateQuantity(index, newQuantity) {
+        items[index].quantity = parseInt(newQuantity);
+        checkNotifications();
+    }
+
+    function checkNotifications() {
+        notificationArea.innerHTML = '';
+        items.forEach(item => {
+            if (item.quantity < 3) {
+                const notification = document.createElement('div');
+                notification.className = 'notification';
+                notification.innerText = `${item.name}: ${item.quantity} unidades`;
+                notificationArea.appendChild(notification);
             }
-        }
-    </script>
+        });
+    }
+
+    renderItems();
+    checkNotifications();
+</script>
+
 </body>
 </html>
