--- a/index.html
+++ b/index.html
@@ -3,29 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Itens</title>
+    <title>Lista de Itens - Decafil</title>
     <style>
         body {
             display: flex;
             font-family: Arial, sans-serif;
+            background-color: #e0f7fa; /* Azul claro */
+            color: #003c8f; /* Azul escuro */
+        }
+        h1 {
+            text-align: center;
+            color: #0056b3; /* Azul vibrante */
+            margin: 20px 0;
         }
         #itemList {
             width: 300px;
             padding: 10px;
+            background-color: #b3e5fc; /* Azul mais claro para o painel */
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         #notifications {
             margin-left: 20px;
             padding: 10px;
             width: 200px;
-            border: 1px solid #ccc;
+            background-color: #bbdefb; /* Azul claro para notificações */
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        input[type="text"],
+        input[type="number"] {
+            margin: 5px 0;
+            padding: 5px;
+            border: 1px solid #0056b3; /* Azul vibrante para bordas */
+            border-radius: 4px;
+            width: 90%;
         }
         .notification {
             color: red;
             margin: 5px 0;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
+
+<h1>Decafil</h1>
 
 <div id="itemList">
     <h2>Lista de Itens</h2>
