--- a/index.html
+++ b/index.html
@@ -8,27 +8,29 @@
         body {
             display: flex;
             font-family: Arial, sans-serif;
-            background-color: #e0f7fa; /* Azul claro */
-            color: #003c8f; /* Azul escuro */
+            background-color: #e3f2fd; /* Azul bem claro */
+            color: #003c8f; /* Azul escuro para texto */
+            padding: 20px;
         }
         h1 {
-            text-align: center;
-            color: #0056b3; /* Azul vibrante */
-            margin: 20px 0;
+            color: #b2ebf2; /* Azul bebê */
+            margin: 0;
         }
         #itemList {
             width: 300px;
             padding: 10px;
-            background-color: #b3e5fc; /* Azul mais claro para o painel */
+            background-color: #bbdefb; /* Azul claro para o painel */
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         #notifications {
-            margin-left: 20px;
-            padding: 10px;
-            width: 200px;
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 250px;
             background-color: #bbdefb; /* Azul claro para notificações */
             border-radius: 8px;
+            padding: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         input[type="text"],
