--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             background-color: #e3f2fd; /* Azul bem claro */
             color: #003c8f; /* Azul escuro para texto */
             padding: 20px;
-            position: relative;
         }
         h1 {
             color: #b2ebf2; /* Azul bebê */
@@ -19,18 +18,22 @@
             margin: 0;
             width: 100%; /* Para garantir o alinhamento à direita */
         }
+        #container {
+            display: flex;
+            width: 100%;
+            justify-content: space-between; /* Para espaçar os elementos */
+        }
         #itemList {
             width: 300px;
             padding: 10px;
             background-color: #bbdefb; /* Azul claro para o painel */
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            margin-right: 20px; /* Espaço entre a lista e as notificações */
         }
         #notifications {
-            position: absolute;
-            top: 60px; /* Abaixo do título */
-            right: 20px; /* No canto direito */
+            position: relative;
+            top: 20px; /* Espaço abaixo do título */
+            right: 0;
             width: 250px;
             background-color: #bbdefb; /* Azul claro para notificações */
             border-radius: 8px;
@@ -56,16 +59,18 @@
 
 <h1>Decafil</h1>
 
-<div id="itemList">
-    <h2>Lista de Itens</h2>
-    <ul id="items">
-        <!-- Itens serão gerados aqui -->
-    </ul>
-</div>
+<div id="container">
+    <div id="itemList">
+        <h2>Lista de Itens</h2>
+        <ul id="items">
+            <!-- Itens serão gerados aqui -->
+        </ul>
+    </div>
 
-<div id="notifications">
-    <h2>Notificações</h2>
-    <div id="notificationArea"></div>
+    <div id="notifications">
+        <h2>Notificações</h2>
+        <div id="notificationArea"></div>
+    </div>
 </div>
 
 <script>
