--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
             background-color: #e3f2fd; /* Azul bem claro */
             color: #003c8f; /* Azul escuro para texto */
             padding: 20px;
+            height: 100vh;
+            box-sizing: border-box;
         }
         #container {
             display: flex;
             width: 100%;
             justify-content: space-between; /* Para espaçar os elementos */
+            flex-grow: 1; /* Para ocupar todo o espaço disponível */
         }
         #itemList {
-            width: 300px;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Grade responsiva */
+            gap: 10px; /* Espaço entre os itens */
             padding: 10px;
             background-color: #bbdefb; /* Azul claro para o painel */
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            overflow-y: auto; /* Scroll se necessário */
+            height: calc(100vh - 100px); /* Ajusta a altura para as notificações e título */
         }
         #notifications {
             position: relative;
-            top: 20px; /* Espaço abaixo do título */
-            right: 0;
             width: 250px;
             background-color: #bbdefb; /* Azul claro para notificações */
             border-radius: 8px;
@@ -37,16 +42,16 @@
         h1 {
             color: #b2ebf2; /* Azul bebê */
             text-align: right; /* Alinhado à direita */
-            margin: 0;
+            margin: 0 0 10px 0; /* Margem abaixo do título */
             width: 100%; /* Para garantir o alinhamento à direita */
         }
         input[type="text"],
         input[type="number"] {
-            margin: 5px 0;
             padding: 5px;
             border: 1px solid #0056b3; /* Azul vibrante para bordas */
             border-radius: 4px;
-            width: 90%;
+            width: 100%; /* Preencher o espaço do item */
+            box-sizing: border-box; /* Para incluir padding e bordas no total */
         }
         .notification {
             color: red;
