--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             overflow-y: auto; /* Scroll se necessário */
-            height: calc(100vh - 100px); /* Ajusta a altura para as notificações e título */
+            height: calc(100vh - 150px); /* Ajusta a altura para as notificações e título */
         }
         #notifications {
             position: relative;
@@ -43,7 +43,11 @@
             color: #b2ebf2; /* Azul bebê */
             text-align: right; /* Alinhado à direita */
             margin: 0 0 10px 0; /* Margem abaixo do título */
+            font-size: 24px; /* Aumenta o tamanho do título */
             width: 100%; /* Para garantir o alinhamento à direita */
+        }
+        h2 {
+            margin: 10px 0; /* Margem para o subtítulo */
         }
         input[type="text"],
         input[type="number"] {
