--- a/index.html
+++ b/index.html
@@ -4,29 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decafil</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-color: lightblue;
+            font-family: Arial, sans-serif;
+        }
+        h1 {
+            color: darkblue;
+            text-align: center;
+            font-size: 48px;
+            margin: 20px 0;
+        }
+        #container {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px;
+        }
+        #item-list {
+            width: 60%;
+        }
+        #notifications {
+            width: 30%;
+            position: fixed;
+            right: 20px;
+            top: 100px;
+            max-height: 400px;
+            overflow-y: auto;
+        }
+        .notification {
+            background-color: #ffcccb;
+            margin: 5px;
+            padding: 10px;
+            border: 1px solid red;
+        }
+        .item {
+            display: flex;
+            justify-content: space-between;
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="logo">Decafil</div>
-        <div class="notifications">
-            <span>🔔 3 Notificações</span>
-        </div>
-    </header>
-    
-    <main>
-        <h1>Lista de Itens</h1>
-        <ul class="item-list">
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-            <li>Item 4</li>
-            <li>Item 5</li>
-        </ul>
-    </main>
-    
-    <footer>
-        <p>© 2024 Decafil. Todos os direitos reservados.</p>
-    </footer>
+
+<h1>Decafil</h1>
+
+<div id="container">
+    <div id="item-list">
+        <div class="item"><input type="text" value="Produto 1" onchange="updateNotifications()"> <input type="number" value="5" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 2" onchange="updateNotifications()"> <input type="number" value="2" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 3" onchange="updateNotifications()"> <input type="number" value="1" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 4" onchange="updateNotifications()"> <input type="number" value="4" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 5" onchange="updateNotifications()"> <input type="number" value="0" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 6" onchange="updateNotifications()"> <input type="number" value="6" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 7" onchange="updateNotifications()"> <input type="number" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 8" onchange="updateNotifications()"> <input type="number" value="2" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 9" onchange="updateNotifications()"> <input type="number" value="5" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 10" onchange="updateNotifications()"> <input type="number" value="1" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 11" onchange="updateNotifications()"> <input type="number" value="4" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 12" onchange="updateNotifications()"> <input type="number" value="0" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 13" onchange="updateNotifications()"> <input type="number" value="6" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 14" onchange="updateNotifications()"> <input type="number" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 15" onchange="updateNotifications()"> <input type="number" value="2" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 16" onchange="updateNotifications()"> <input type="number" value="5" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 17" onchange="updateNotifications()"> <input type="number" value="0" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 18" onchange="updateNotifications()"> <input type="number" value="4" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 19" onchange="updateNotifications()"> <input type="number" value="1" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 20" onchange="updateNotifications()"> <input type="number" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 21" onchange="updateNotifications()"> <input type="number" value="2" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 22" onchange="updateNotifications()"> <input type="number" value="5" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 23" onchange="updateNotifications()"> <input type="number" value="0" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 24" onchange="updateNotifications()"> <input type="number" value="4" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 25" onchange="updateNotifications()"> <input type="number" value="1" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 26" onchange="updateNotifications()"> <input type="number" value="3" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 27" onchange="updateNotifications()"> <input type="number" value="2" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 28" onchange="updateNotifications()"> <input type="number" value="5" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 29" onchange="updateNotifications()"> <input type="number" value="0" min="0" onchange="updateNotifications()"></div>
+        <div class="item"><input type="text" value="Produto 30" onchange="updateNotifications()"> <input type="number" value="4" min="0" onchange="updateNotifications()"></div>
+    </div>
+    <div id="notifications"></div>
+</div>
+
+<script>
+    function updateNotifications() {
+        const notificationsContainer = document.getElementById('notifications');
+        notificationsContainer.innerHTML = '';
+        const items = document.querySelectorAll('.item');
+
+        items.forEach(item => {
+            const quantity = parseInt(item.querySelector('input[type="number"]').value);
+            const productName = item.querySelector('input[type="text"]').value;
+
+            if (quantity < 3) {
+                const notification = document.createElement('div');
+                notification.classList.add('notification');
+                notification.textContent = `Produto "${productName}" em falta!`;
+                notificationsContainer.appendChild(notification);
+            }
+        });
+    }
+</script>
+
 </body>
 </html>
