--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             width: 100%; /* Ocupa toda a largura */
         }
         .item input[type="number"] {
-            width: 100%; /* Ocupa toda a largura */
-            margin-top: 5px; /* Espaço entre o nome e a quantidade */
+            width: 50px; /* Tamanho reduzido */
+            margin-top: 2px; /* Espaço menor entre o nome e a quantidade */
         }
         #notification-title {
             font-weight: bold;
