--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             padding: 20px;
         }
         #item-list {
-            width: 50%; /* Diminuído para tornar a lista mais compacta */
+            width: 50%;
             border: 2px solid darkorange;
             padding: 10px;
             border-radius: 5px;
@@ -51,19 +51,23 @@
         }
         .item {
             display: flex;
-            flex-direction: column; /* Mudado para coluna */
-            margin: 5px 0; /* Diminuído para tornar a lista mais compacta */
+            flex-direction: column;
+            margin: 5px 0;
         }
         .item input[type="text"] {
-            width: 100%; /* Ocupa toda a largura */
+            width: 100%;
         }
         .item input[type="number"] {
-            width: 50px; /* Tamanho reduzido */
-            margin-top: 2px; /* Espaço menor entre o nome e a quantidade */
+            width: 50px;
+            margin-top: 2px;
         }
         #notification-title {
             font-weight: bold;
             margin-bottom: 10px;
+            text-align: center;
+        }
+        #min-quantity-container {
+            margin-bottom: 20px;
             text-align: center;
         }
     </style>
@@ -74,37 +78,15 @@
 
 <div id="container">
     <div id="item-list">
+        <div id="min-quantity-container">
+            <label for="min-quantity">Quantidade mínima para notificação:</label>
+            <input type="number" id="min-quantity" value="3" min="0" onchange="updateNotifications()">
+        </div>
         <div id="item-list-title">Lista de itens</div>
         <div class="item"><input type="text" value="Produto 1" onchange="updateNotifications()"> <input type="number" value="5" min="0" onchange="updateNotifications()"></div>
         <div class="item"><input type="text" value="Produto 2" onchange="updateNotifications()"> <input type="number" value="2" min="0" onchange="updateNotifications()"></div>
         <div class="item"><input type="text" value="Produto 3" onchange="updateNotifications()"> <input type="number" value="1" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 4" onchange="updateNotifications()"> <input type="number" value="4" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 5" onchange="updateNotifications()"> <input type="number" value="0" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 6" onchange="updateNotifications()"> <input type="number" value="6" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 7" onchange="updateNotifications()"> <input type="number" value="3" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 8" onchange="updateNotifications()"> <input type="number" value="2" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 9" onchange="updateNotifications()"> <input type="number" value="5" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 10" onchange="updateNotifications()"> <input type="number" value="1" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 11" onchange="updateNotifications()"> <input type="number" value="4" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 12" onchange="updateNotifications()"> <input type="number" value="0" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 13" onchange="updateNotifications()"> <input type="number" value="6" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 14" onchange="updateNotifications()"> <input type="number" value="3" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 15" onchange="updateNotifications()"> <input type="number" value="2" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 16" onchange="updateNotifications()"> <input type="number" value="5" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 17" onchange="updateNotifications()"> <input type="number" value="0" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 18" onchange="updateNotifications()"> <input type="number" value="4" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 19" onchange="updateNotifications()"> <input type="number" value="1" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 20" onchange="updateNotifications()"> <input type="number" value="3" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 21" onchange="updateNotifications()"> <input type="number" value="2" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 22" onchange="updateNotifications()"> <input type="number" value="5" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 23" onchange="updateNotifications()"> <input type="number" value="0" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 24" onchange="updateNotifications()"> <input type="number" value="4" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 25" onchange="updateNotifications()"> <input type="number" value="1" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 26" onchange="updateNotifications()"> <input type="number" value="3" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 27" onchange="updateNotifications()"> <input type="number" value="2" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 28" onchange="updateNotifications()"> <input type="number" value="5" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 29" onchange="updateNotifications()"> <input type="number" value="0" min="0" onchange="updateNotifications()"></div>
-        <div class="item"><input type="text" value="Produto 30" onchange="updateNotifications()"> <input type="number" value="4" min="0" onchange="updateNotifications()"></div>
+        <!-- Adicione os itens restantes aqui -->
     </div>
     <div id="notifications">
         <div id="notification-title">Notificações</div>
@@ -114,14 +96,15 @@
 <script>
     function updateNotifications() {
         const notificationsContainer = document.getElementById('notifications');
-        notificationsContainer.innerHTML = '<div id="notification-title">Notificações</div>'; // Reset notifications with title
+        notificationsContainer.innerHTML = '<div id="notification-title">Notificações</div>';
         const items = document.querySelectorAll('.item');
+        const minQuantity = parseInt(document.getElementById('min-quantity').value); // Obtém a quantidade mínima configurável
 
         items.forEach(item => {
             const quantity = parseInt(item.querySelector('input[type="number"]').value);
             const productName = item.querySelector('input[type="text"]').value;
 
-            if (quantity < 3) {
+            if (quantity < minQuantity) { // Usa a quantidade mínima configurável
                 const notification = document.createElement('div');
                 notification.classList.add('notification');
                 notification.textContent = `Produto "${productName}" em falta!`;
@@ -130,7 +113,6 @@
         });
     }
 
-    // Chama a função de atualização de notificações ao carregar a página
     window.onload = updateNotifications;
 </script>
 
